port to fabric