@@ -1,101 +1,101 @@
 package com.lootbeams;
 
-import net.minecraft.item.Item;
-import net.minecraft.util.ResourceLocation;
-import net.minecraftforge.common.ForgeConfigSpec;
-import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.registries.ForgeRegistries;
+import com.google.gson.FieldNamingPolicy;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.stream.JsonWriter;
+import com.mojang.datafixers.util.Pair;
+import net.fabricmc.loader.api.FabricLoader;
+import net.minecraft.core.HolderSet;
+import net.minecraft.core.Registry;
+import net.minecraft.network.chat.TextColor;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.Item;
 
-import java.awt.*;
+import java.io.File;
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
-@Mod.EventBusSubscriber
 public class Configuration {
-
-	public static ForgeConfigSpec CLIENT_CONFIG;
-
-	public static ForgeConfigSpec.BooleanValue ALL_ITEMS;
-	public static ForgeConfigSpec.BooleanValue ONLY_EQUIPMENT;
-	public static ForgeConfigSpec.BooleanValue ONLY_RARE;
-	public static ForgeConfigSpec.ConfigValue<List<String>> WHITELIST;
-	public static ForgeConfigSpec.ConfigValue<List<String>> BLACKLIST;
-	public static ForgeConfigSpec.ConfigValue<List<String>> COLOR_OVERRIDES;
-
-	public static ForgeConfigSpec.BooleanValue RENDER_NAME_COLOR;
-	public static ForgeConfigSpec.BooleanValue RENDER_RARITY_COLOR;
-	public static ForgeConfigSpec.DoubleValue BEAM_RADIUS;
-	public static ForgeConfigSpec.DoubleValue BEAM_HEIGHT;
-	public static ForgeConfigSpec.DoubleValue BEAM_Y_OFFSET;
-	public static ForgeConfigSpec.DoubleValue BEAM_ALPHA;
-	public static ForgeConfigSpec.DoubleValue RENDER_DISTANCE;
-
-	public static ForgeConfigSpec.BooleanValue BORDERS;
-	public static ForgeConfigSpec.BooleanValue RENDER_NAMETAGS;
-	public static ForgeConfigSpec.BooleanValue RENDER_NAMETAGS_ONLOOK;
-	public static ForgeConfigSpec.BooleanValue RENDER_STACKCOUNT;
-	public static ForgeConfigSpec.DoubleValue NAMETAG_LOOK_SENSITIVITY;
-	public static ForgeConfigSpec.DoubleValue NAMETAG_TEXT_ALPHA;
-	public static ForgeConfigSpec.DoubleValue NAMETAG_BACKGROUND_ALPHA;
-	public static ForgeConfigSpec.DoubleValue NAMETAG_SCALE;
-	public static ForgeConfigSpec.DoubleValue NAMETAG_Y_OFFSET;
-	public static ForgeConfigSpec.BooleanValue DMCLOOT_COMPAT_RARITY;
-	public static ForgeConfigSpec.ConfigValue<List<String>> CUSTOM_RARITIES;
-	public static ForgeConfigSpec.BooleanValue WHITE_RARITIES;
+	public static final Gson GSON;
 
 	static {
-		ForgeConfigSpec.Builder clientBuilder = new ForgeConfigSpec.Builder();
-
-		clientBuilder.comment("Beam Config").push("Loot Beams");
-		RENDER_NAME_COLOR = clientBuilder.comment("If beams should be colored the same as the Items name (excludes name colors from rarity). This has priority over render_rarity_color.").define("render_name_color", true);
-		RENDER_RARITY_COLOR = clientBuilder.comment("If beams should be colored the same as the Items rarity.").define("render_rarity_color", true);
-		BEAM_RADIUS = clientBuilder.comment("The radius of the Loot Beam.").defineInRange("beam_radius", 1D, 0D, 5D);
-		BEAM_HEIGHT = clientBuilder.comment("The height of the Loot Beam.").defineInRange("beam_height", 1D, 0D, 10D);
-		BEAM_Y_OFFSET = clientBuilder.comment("The Y-offset of the loot beam.").defineInRange("beam_y_offset", 0D, -30D, 30D);
-		BEAM_ALPHA = clientBuilder.comment("Transparency of the Loot Beam.").defineInRange("beam_alpha", 0.85D, 0D, 1D);
-		RENDER_DISTANCE = clientBuilder.comment("How close the player has to be to see the beam. (note: ItemEntities stop rendering at 24 blocks, so that is the limit for beams)").defineInRange("render_distance", 24D, 0D, 24D);
-		COLOR_OVERRIDES = clientBuilder.comment("Overrides an item's beam color with hex color. Must follow the specific format: (registryname=hexcolor) Or (#tagname=hexcolor). Example: \"minecraft:stone=0xFFFFFF\". This also accepts modids.").define("color_overrides", new ArrayList<>());
-
-		clientBuilder.comment("Item Config").push("Items");
-		ALL_ITEMS = clientBuilder.comment("If all Items Loot Beams should be rendered. Has priority over only_equipment and only_rare.").define("all_items", true);
-		ONLY_RARE = clientBuilder.comment("If Loot Beams should only be rendered on items with rarity.").define("only_rare", false);
-		ONLY_EQUIPMENT = clientBuilder.comment("If Loot Beams should only be rendered on equipment. (Equipment includes: Swords, Tools, Armor, Shields, Bows, Crossbows, Tridents, Arrows, and Fishing Rods)").define("only_equipment", false);
-		WHITELIST = clientBuilder.comment("Registry names of items that Loot Beams should render on. Example: \"minecraft:stone\", \"minecraft:iron_ingot\", You can also specify modids for a whole mod's items.").define("whitelist", new ArrayList<>());
-		BLACKLIST = clientBuilder.comment("Registry names of items that Loot Beams should NOT render on. This has priority over everything. You can also specify modids for a whole mod's items.").define("blacklist", new ArrayList<>());
-		clientBuilder.pop();
-
-		clientBuilder.comment("Item nametags").push("Nametags");
-		BORDERS = clientBuilder.comment("Render nametags as bordered. Set to false for flat nametag with background.").define("borders", true);
-		RENDER_NAMETAGS = clientBuilder.comment("If Item nametags should be rendered.").define("render_nametags", true);
-		RENDER_NAMETAGS_ONLOOK = clientBuilder.comment("If Item nametags should be rendered when looking at items.").define("render_nametags_onlook", true);
-		RENDER_STACKCOUNT = clientBuilder.comment("If the count of item's should also be shown in the nametag.").define("render_stackcount", true);
-		NAMETAG_LOOK_SENSITIVITY = clientBuilder.comment("How close the player has to look at the item to render the nametag.").defineInRange("nametag_look_sensitivity", 0.018D, 0D, 5D);
-		NAMETAG_TEXT_ALPHA = clientBuilder.comment("Transparency of the nametag text.").defineInRange("nametag_text_alpha", 1D, 0D, 1D);
-		NAMETAG_BACKGROUND_ALPHA = clientBuilder.comment("Transparency of the nametag background/border.").defineInRange("nametag_background_alpha", 0.5D, 0D, 1D);
-		NAMETAG_SCALE = clientBuilder.comment("Scale of the nametag.").defineInRange("nametag_scale", 1, -10D, 10D);
-		NAMETAG_Y_OFFSET = clientBuilder.comment("The Y-offset of the nametag.").defineInRange("nametag_y_offset", 0.75D, -30D, 30D);
-		DMCLOOT_COMPAT_RARITY = clientBuilder.comment("If a smaller tag should be rendered under with DMCLoot rarities.").define("dmcloot_compat_rarity", true);
-		CUSTOM_RARITIES = clientBuilder.comment("Define what the smaller tag should render on. Example: \"Exotic\", \"Ancient\". The string supplied has to be the tooltip line below the name. This is really only used for modpacks.").define("custom_rarities", new ArrayList<>());
-		WHITE_RARITIES = clientBuilder.comment("If rarities should ignore color and render as white (This is really only used for modpacks)").define("white_rarities", false);
-		clientBuilder.pop();
-
-		clientBuilder.pop();
-
-		CLIENT_CONFIG = clientBuilder.build();
+		GSON = new GsonBuilder().setFieldNamingPolicy(FieldNamingPolicy.LOWER_CASE_WITH_UNDERSCORES)
+				.setPrettyPrinting()
+				.create();
 	}
 
-	public static Color getColorFromItemOverrides(Item i) {
-		List<String> overrides = COLOR_OVERRIDES.get();
+	public boolean allItems = true;
+	public boolean onlyEquipment = false;
+	public boolean onlyRare = false;
+	public List<String> whitelist = new ArrayList<>();
+	public List<String> blacklist = new ArrayList<>();
+	public List<String> colorOverrides = new ArrayList<>();
+
+	public boolean renderNameColor = true;
+	public boolean renderRarityColor = true;
+	public float beamRadius = 1;
+	public float beamHeight = 1;
+	public float beamYOffset = 0;
+	public float beamAlpha = 0.85f;
+	public float renderDistance = 24.0f;
+
+	public boolean borders = true;
+	public boolean renderNametags = true;
+	public boolean renderNametagsOnlook = true;
+	public boolean renderStackcount = true;
+	public float nametagLookSensitivity = 0.018f;
+	public float nametagTextAlpha = 1;
+	public float nametagBackgroundAlpha = 0.5f;
+	public float nametagScale = 1.0f;
+	public float nametagYOffset = 0.75f;
+	public boolean dmclootCompatRarity = true;
+	public List<String> customRarities = new ArrayList<>();
+	public boolean whiteRarities = false;
+
+	public static Configuration load(){
+		File configFile = FabricLoader.getInstance().getConfigDir().resolve(LootBeams.MODID + ".json").toFile();
+		if (configFile.isFile()) {
+			try {
+				Configuration fromJson = GSON.fromJson(new FileReader(configFile), Configuration.class);
+				if (fromJson == null) fromJson = new Configuration();
+				return fromJson;
+			} catch (IOException e) {
+				LootBeams.LOGGER.warn("cannot load config file", e);
+			}
+		}
+		else{
+			Configuration inst = new Configuration();
+			inst.save();
+			return inst;
+		}
+		return new Configuration();
+	}
+
+	public void save(){
+		File configFile = FabricLoader.getInstance().getConfigDir().resolve(LootBeams.MODID + ".json").toFile();
+		try (JsonWriter writer = new JsonWriter(new FileWriter(configFile))) {
+			GSON.toJson(this, Configuration.class, writer);
+		} catch (IOException e) {
+			LootBeams.LOGGER.warn("cannot save config file", e);
+		}
+	}
+
+	public static TextColor getColorFromItemOverrides(Item i) {
+		List<String> overrides = LootBeams.config.colorOverrides;
 		if (overrides.size() > 0) {
-			for (String unparsed : overrides.stream().filter((s) -> (!s.isEmpty())).collect(Collectors.toList())) {
+			for (String unparsed : overrides.stream().filter((s) -> (!s.isEmpty())).toList()) {
 				String[] configValue = unparsed.split("=");
 				if (configValue.length == 2) {
 					String nameIn = configValue[0];
 					ResourceLocation registry = ResourceLocation.tryParse(nameIn.replace("#", ""));
-					Color colorIn = null;
+					TextColor colorIn = null;
 					try {
-						colorIn = Color.decode(configValue[1]);
+						colorIn = TextColor.parseColor(configValue[1]);
 					} catch (Exception e) {
 						LootBeams.LOGGER.error(String.format("Color overrides error! \"%s\" is not a valid hex color for \"%s\"", configValue[1], nameIn));
 						return null;
@@ -103,7 +103,7 @@ public class Configuration {
 
 					//Modid
 					if (!nameIn.contains(":")) {
-						if (i.getRegistryName().getNamespace().equals(nameIn)) {
+						if (Registry.ITEM.getKey(i).getNamespace().equals(nameIn)) {
 							return colorIn;
 						}
 
@@ -112,14 +112,17 @@ public class Configuration {
 					if (registry != null) {
 						//Tag
 						if (nameIn.startsWith("#")) {
-							if (i.getTags().contains(registry)) {
+							Optional<HolderSet.Named<Item>> tag = Registry.ITEM.getTags().filter(pair -> pair.getFirst().location().equals(registry))
+									.findFirst().map(Pair::getSecond);
+//							Optional<HolderSet.Named<Item>> tag = Registry.ITEM.getTag(TagKey.create(Registry.ITEM_REGISTRY, registry));
+							if(tag.isPresent() && tag.get().contains(Registry.ITEM.getHolder(Registry.ITEM.getResourceKey(i).get()).get())){
 								return colorIn;
 							}
 						}
 
 						//Item
-						Item registryItem = ForgeRegistries.ITEMS.getValue(registry);
-						if (registryItem != null && registryItem.getItem() == i) {
+						Optional<Item> registryItem = Registry.ITEM.getOptional(registry);
+						if (registryItem.isPresent() && registryItem.get().asItem() == i.asItem()) {
 							return colorIn;
 						}
 
